deployment/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ome-service
spec:
  selector:
    app: tracer-ome
  ports:
  - protocol: TCP
    port: 8989
    targetPort: 8989
