deployment/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: tracer-ome-ingress
  annotations:
    # SSL support for ingress
    kubernetes.io/ingress.global-static-ip-name: ome-ingress-ip
    networking.gke.io/managed-certificates: ome-cert
    kubernetes.io/ingress.class: "gce"
spec:
  rules:
  - http:
      paths:
      - path: /*
        backend:
          serviceName: ome-node-service
          servicePort: 8989
